# MyRunner

./: CMakeLists.txt  Makefile  README.md  SUMMARY.md  add_animator.c  convert_to_map.c  create_game.c  create_object.c  destroy_game.c  destroy_map.c  destroy_object.c  instantiate_map.c  instatiate_player.c  load_file_in_mem.c  load_map.c  main.c  start.c  update_animation.c  update_background.c  update_block.c  update_events.c  update_objects.c  update_render.c
assets/: map
include/: component.h  my.h  my_linkedlist.h  my_runner.h
lib/my/: Makefile  my_put_nbr.c  my_put_usnigned_nbr.c  my_putchar.c  my_puterr.c  my_putstr.c  my_revstr.c  my_strlen.c
lib/my_linkedlist/: Makefile  my_linkedlist.c
